# muffin

./: Cargo.toml  MIT-LICENSE  README.md
examples/: basic.rs  forever.rs  mutable_state.rs
src/: backoff.rs  config.rs  db.rs  job.rs  lib.rs  muffin.rs  types.rs
tests/: priority.rs  scheduled.rs  status.rs  unique.rs
tests/utils/: mod.rs
